--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/58d5cbd9fe.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Formulario</title>
 </head>
 
 <body>
@@ -68,18 +68,13 @@
                         <label for="inputPassword4"><b>Postal Code</b> </label>
                         <input type="text" class="form-control">
                     </div><br>
-
-                    <!--payment-->
-
-
-
                 </div>
                 <!--text area-->
 
                 <div class="form-row m-3">
                     <div class="col-4 p-1">
                         <b>We accept:</b>
-                        <br>
+                        <br><br>
                         <!--tarjetas-->
                         <div style="background-color: grey;">
 
